fix: Correcting js route

--- a/templates/juego15.html
+++ b/templates/juego15.html
@@ -11,7 +11,7 @@
 
     <body>
         <div id="juego15" tabindex="0"></div>
-        <script src="../dynamics/JS/grid.js"></script>
+        <script src="../dynamics/JS/juego15.js"></script>
     </body>
 
 </html>
