--- a/assets/styles/juego15.css
+++ b/assets/styles/juego15.css
@@ -23,9 +23,9 @@ body{
     border-radius: 2em;
     font-size: 1.5em;
     /* Transition */
-    transition-duration: 0.5s;
-    transition-property: background-color,content;
-    transition-timing-function: ease-out;
+    transition-duration: inherit;
+    transition-property: inherit;
+    transition-timing-function: inherit;
 }
 .item:hover{
     background-color: chocolate;
@@ -40,8 +40,21 @@ body{
     /* Properties */
     background-color: rgb(192, 144, 81);
     padding: 1em;
+    /* Transition */
+    transition-duration: 0.5s;
+    transition-property: background-color,content;
+    transition-timing-function: ease-out;
 }
 #num_0{
     background-color: rgb(192, 144, 81);
     border: none;
+    /* Transition */
+    transition-duration: inherit;
+    transition-property: inherit;
+    transition-timing-function: inherit;
+}
+#juego15:focus,#juego15>div:focus{
+    background-color: rgb(192, 144, 81);
+    border: 0.2em solid chocolate;
+    outline: none;
 }
